# berlayar

./: .coverage  .gitignore  Dockerfile.berlayar  Dockerfile.prod  README.md  chainlit.md  config.py  dataloader.ipynb  diagram.py  log_init.py  main.py  pyproject.toml  pytest.ini  report_integration_db_connectors.txt  report_integration_db_utils.txt  requirements.txt  setup.py  update_env.py  update_poetry.py  upload.py
.chainlit/: config.toml
app/: analysis.py  config.py  intelligence.py  intelligence_combine.py  main.py
db/: chunk.py  connectors.py  main.py  utils.py
db/ops/: deeplake.py
db/tests/: unit_chunk.py  unit_connectors.py  unit_utils.py
demos/chat_adf/: chat.py  tests.py  utils.py
demos/thesoundofstories/: chat.py  eraetouch.py  main.py  main_copy.py
gui/: interface.py
live/: showcase.py
src/: base_classes.py  data_models.py
src/berlayar/config/: config_loader.py  google_secrets.py  models.yaml
src/berlayar/dataops/: interface.py  session_repository.py  user_repository.py
src/dataops/: artwork.py  mock.py  utils.py
src/landfill/: janitor.py
src/models/: gpt.py  gpt_translate.py  image_embeddings.py  imagebind_model_wrapper.py
src/processors/: file_processors.py  git.py  img.py
src/retrieval/: openai_retrieval.py  retrieval_az_key.py
src/sources/: ctrip.py  git.py  img.py  pdf.py  spreadsheet.py  weibo.py  weibo_jsonl.py
src/utils/: chunks_common.py  chunks_pdf.py  chunks_py.py  cloud.py  connectors.py  embeddings.py  embeddings_weighting.py  helpers.py  ingest_pdf.py  last_processed_commit.txt  metadata_git.py  utils.py
tests/: integration_db_connectors.py  integration_db_utils.py
tests/integration/: functional_artwork.py  functional_artwork_embeddings.py  functional_artwork_metadata.py  functional_config.py  functional_gpt.py  functional_gpt_semantics.py  functional_gpt_translate.py  functional_image_embeddings.py  functional_imagebind.py  functional_spreadsheet.py  integration_cloud.py  integration_db_connectors.py  integration_img_spreadsheet.py  integration_main.py  integration_weibo.py  test_env_config_loader.py  test_git_integration.py  test_google_secrets_config_loader.py
tests/unit/: config_loader.py  test_chunks.py  test_connectors.py  test_source_selection.py  test_utils.py
(+56 files in other folders)
