[tool.poetry]
name = "berlayar"
version = "0.1.0"
description = "Multimodal AI."
authors = ["Enjiao Chen <erniesg@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.25.0"
openai = "^1.12.0"
astor = "^0.8.1"
pytest = "^7.1.3"
langchain = "^0.0.251"
deeplake = "^3.6.15"
python-dotenv = "^1.0.0"
sentence-transformers = "^2.2.2"
protobuf = "4.25.3"
typing-extensions = "4.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
