[tool.poetry]
name = "berlayar"
version = "0.1.0"
description = "Multimodal AI."
authors = ["Enjiao Chen <erniesg@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.25.0"
openai = "^0.28.1"  # Updated to match pip freeze
astor = "^0.8.1"
pytest = "^7.1.3"
langchain = "^0.0.316"  # Updated to match pip freeze
deeplake = "^3.6.15"  # Assuming no change since it's not listed in pip freeze
python-dotenv = "^1.0.0"
sentence-transformers = "^2.2.2"
protobuf = "^3.20.0"  # Updated to match pip freeze
typing-extensions = "^4.7.1"
chainlit = "1.0.0"
diffusers = "0.26.3"
google-cloud-storage = "2.14.0"
google-cloud-secret-manager = "^2.18.1"
neutone-sdk = "^1.4.2"
flask = "^3.0.2"
twilio = "^8.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
